--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</div>
 	<div class="select bottom">
 		<div class="wrap">
-			
+			<div id="mesXY"></div>
 		</div>
 	</div>
 	<div id="newButton-copy" class="mes mes-new window" style="display: none" >
