--- a/index.html
+++ b/index.html
@@ -35,72 +35,28 @@
 					<div class="icon text">&#xe924;</div>
 					<p>新建</p>
 				</li>
+				<li class="item" id="passButton">
+					<div class="icon text">&#xf02f;</div>
+					<p>通用</p>
+				</li>
+				<li class="item" id="xieButton">
+					<div class="icon text">&#xf065;</div>
+					<p>斜线</p>
+				</li>
+				<li class="item" id="selfButton">
+					<div class="icon text">&#xf031;</div>
+					<p>个体</p>
+				</li>
+				<li class="item" id="getButton">
+					<div class="icon text">&#xe933;</div>
+					<p>获取</p>
+				</li>
+				<li class="item" id="passButton">
+					<div class="icon text">&#xf00a;</div>
+					<p>Github</p>
+				</li>
 			</ul>
-			<form class="fixed-public">
-				<ul class="fixed-public-next">
-					<li class="item">
-						<ul>
-							<li class="item-next">
-								<input type="text" placeholder="文字大小">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="文字字体">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="文字颜色">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="背景颜色">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="行高">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="文字居中">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="宽">
-							</li>
-							<li class="item-next">
-								<input type="text" placeholder="高">
-							</li>
-							<li class="item-next">
-								<span class="icon">&#xe905;</span>
-								<input type="text" placeholder="内容">
-							</li>
-						</ul>
-					</li>
-					<li class="item">
-						<ul id="borderSelect">
-							<li class="item-next ic">&#xe232;</li>
-							<li class="item-next ic">&#xe230;</li>
-							<li class="item-next ic">&#xe229;</li>
-							<li class="item-next ic">&#xe22e;</li>
-							<li class="item-next ic active">&#xe22f;</li>
-							<li class="item-next pd">
-								<input type="text" class="peizhi" placeholder="边框配置(例如)1px solid #000">-
-							</li>
-							<li class="item-next pd">
-								表格斜线
-							</li>
-							<li class="item-next ic">
-								/
-							</li>
-							<li class="item-next ic">
-								\
-							</li>
-							<li class="item-next pd">
-								<span class="icon">&#xe905;</span>
-								<input type="text" placeholder="内容1">
-							</li> 
-							<li class="item-next pd">
-								<input type="text" placeholder="内容2">
-							</li>
-						</ul>
-					</li>
-				</ul>	
-			</form>
-			
+
 		</div>
 	</div>
 	<div class="select content" id="con">
@@ -158,8 +114,99 @@
 				<a href="javascript:;" class="btn" id="newButtonOK">OK</a>
 			</div>
 		</div>
-
 	</div>
+	<div id="passButton-copy" class="mes mes-new mes-pass window" style="display: none;" >
+		<div class="header-box icon">&#xe905; 通用设置<span class="close"></span></div>
+		<form  class="con-box">
+			<div class="item item-01">
+				<label for="pro1-width">width:</label><input type="text" name="width" id="pro1-width">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-height">height:</label><input type="text" name="height" id="pro1-height">
+			</div>
+			<div class="item item-01">
+				<label for="pro1-fontsize">font-size:</label><input type="text" name="fontsize" id="pro1-fontsize">
+			</div>
+			<div class="item item-01">
+				<label for="pro1-weight">font-weight:</label><input type="text" name="fontweight" id="pro1-weight">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-family">font-family:</label><input type="text" name="fontfamily" id="pro1-family">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-color">font-color:</label><input type="text" name="color" id="pro1-color">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-bg">bg-color:</label><input type="text" name="color" id="pro1-bg">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-line">line-height:</label><input type="text" name="bgcolor" id="pro1-line">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-align">text-align:</label><input type="text" name="textalign" id="pro1-align">
+			</div>	
+			<div class="item item-01">
+				<label for="pro1-align">font-style:</label><input type="text" name="fontstyle" id="pro1-style">
+			</div>	
+			<div class="item item-01 item-03">
+				<label for="pro1-text"><span  class="icon">&#xe905;</span> text:</label><input type="text" name="text" id="pro1-text">
+			</div>	
+			<ul class="item item-01 item-04" id="borderSelect">
+				<li class="item-next" style="padding-left: 30px;">边框：</li>
+				<li class="item-next ic">&#xe232;</li>
+				<li class="item-next ic">&#xe230;</li>
+				<li class="item-next ic">&#xe229;</li>
+				<li class="item-next ic">&#xe22e;</li>
+				<li class="item-next ic active">&#xe22f;</li>
+				<li class="item-next">
+					<input type="text" class="peizhi" placeholder="边框配置(例如)1px solid #000" style="width: 200px;margin-left: 10px;">
+				</li>
+			</ul>
+			<div class="item item-03">
+				<a href="javascript:;" class="btn" id="newButtonPass" style="margin-top: 40px;">OK</a>
+			</div>
+		</form>
+	</div>
+	<div id="xieButton-copy" class="mes mes-new mes-xie window" style="display: block;" >
+		<div class="header-box icon">&#xe905; 表格斜线设置<span class="close"></span></div>
+		<form  class="con-box">
+			<div class="item item-05" id="xieTest">
+				<span class="bcon fl"></span>
+				<span class="bcon fr"></span>
+			</div>	
+			<div class="item item-01">
+				<label for="pro-xiebg">斜线颜色:</label><input type="text" name="bg1" id="pro-xiebg" placeholder="例如: #000"><p></p>
+			</div>
+			<div class="item item-01">
+				<label for="pro-bg1">覆盖背景色:</label><input type="text" name="bg2" id="pro-bg1" placeholder="例如: #000"><p>背景色是为了遮盖，以达到斜线的目的</p>
+			</div>
+			<div class="item item-01">
+				<label for="pro-con1">内容一:</label><input type="text" name="con1" id="pro-con1" ><p></p>
+			</div>
+			<div class="item item-01">
+				<label for="pro-con2">内容二:</label><input type="text" name="con2" id="pro-con2" >
+			</div>
+			<div class="item item-03">
+				<a href="javascript:;" class="btn" id="newButtonPass" style="margin-top: 40px;">OK</a>
+			</div>
+		</form>
+	</div>
+<!-- 				<li class="item-next pd">
+					表格斜线
+				</li>
+				<li class="item-next ic">
+					/
+				</li>
+				<li class="item-next ic">
+					\
+				</li>
+				<li class="item-next pd">
+					<span class="icon">&#xe905;</span>
+					<input type="text" placeholder="内容1">
+				</li> 
+				<li class="item-next pd">
+					<input type="text" placeholder="内容2">
+				</li> -->
 </body>
 <script type="text/javascript" src="./js/pc.js"></script>
 <script type="text/javascript" src="./js/main.js"></script>
