--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="./css/main.css">
 	<style type="text/css">
-		h1{color: #fff}
+
 	</style>
 
 	<!--[if lt IE 9]>
@@ -43,10 +43,7 @@
 					<div class="icon text">&#xf065;</div>
 					<p>斜线</p>
 				</li>
-				<li class="item" id="selfButton">
-					<div class="icon text">&#xf031;</div>
-					<p>个体</p>
-				</li>
+				
 				<li class="item" id="getButton">
 					<div class="icon text">&#xe933;</div>
 					<p>获取</p>
@@ -63,6 +60,10 @@
 				<li class="item" id="calcelButton">
 					<div class="icon text">X</div>
 					<p>取消选择</p>
+				</li>
+				<li class="item" id="selfButton">
+					<div class="icon text">&#xf031;</div>
+					<p>合并</p>
 				</li>
 			</ul>
 
@@ -169,6 +170,9 @@
 					<input type="text" class="peizhi" placeholder="边框配置(例如)1px solid #000" style="width: 200px;margin-left: 10px;" name="border">
 				</li>
 			</ul>
+			<div class="item item-04">
+				<label for="pro1-align" style="width: 100%">注意：样式优先级别是 全局设置<分组设置<单个设置</label>
+			</div>	
 			<div class="item item-03">
 				<a href="javascript:;" class="btn" id="newButtonPassG" style="margin-top: 40px;">OK</a>
 			</div>
@@ -176,11 +180,14 @@
 	</div>
 	<div id="xieButton-copy" class="mes mes-new mes-xie window" style="display: block;" >
 		<div class="header-box icon">&#xe905; 表格斜线设置<span class="close"></span></div>
-		<form  class="con-box">
+		<form  class="con-box" id="formXie">
 			<div class="item item-05" id="xieTest">
 				<span class="bcon fl"></span>
 				<span class="bcon fr"></span>
 			</div>	
+			<div class="item item-01">
+				<label for="pro-xiebg">选择类型:</label><input type="text" name="select" id="pro-xiebg" placeholder="1 或 2"><p></p>
+			</div>
 			<div class="item item-01">
 				<label for="pro-xiebg">斜线颜色:</label><input type="text" name="bg1" id="pro-xiebg" placeholder="例如: #000"><p></p>
 			</div>
@@ -194,10 +201,11 @@
 				<label for="pro-con2">内容二:</label><input type="text" name="con2" id="pro-con2" >
 			</div>
 			<div class="item item-03">
-				<a href="javascript:;" class="btn" id="newButtonPass" style="margin-top: 40px;">OK</a>
+				<a href="javascript:;" class="btn" id="newButtonXie" style="margin-top: 10px;">OK</a>
 			</div>
 		</form>
 	</div>
+
 	<div id="zhe"></div>
 </body>
 <script type="text/javascript" src="./js/pc.js"></script>
